[tool.poetry]
name = "horda"
version = "0.1.0"
description = ""
authors = ["Paweł Rubach <p.rubach@cent.uw.edu.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.2.3"
mkdocs-material = "^7.3.6"
#mkdocs-cinder = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
